--- a/build.gradle
+++ b/build.gradle
@@ -12,5 +12,10 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.springframework', name: 'spring-core', version: '5.1.0.RELEASE'
+    compile group: 'org.springframework', name: 'spring-jdbc', version: '5.1.0.RELEASE'
+    compile group: 'org.springframework', name: 'spring-context', version: '5.1.0.RELEASE'
+    compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
