--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,29 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.springframework', name: 'spring-core', version: '5.1.0.RELEASE'
-    compile group: 'org.springframework', name: 'spring-jdbc', version: '5.1.0.RELEASE'
-    compile group: 'org.springframework', name: 'spring-context', version: '5.1.0.RELEASE'
+    compile group: 'org.springframework', name: 'spring-core', version: '4.2.6.RELEASE'
+    compile group: 'org.springframework', name: 'spring-jdbc', version: '4.2.6.RELEASE'
+    compile group: 'org.springframework', name: 'spring-context', version: '4.2.6.RELEASE'
+    compile group: 'org.springframework', name: 'spring-webmvc', version: '4.2.6.RELEASE'
     compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
+    compile group: 'org.apache.cxf', name: 'cxf', version: '3.1.6'
+    compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.2.4.v20141103'
+    compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.2.4.v20141103'
+    compile group: 'org.eclipse.jetty', name: 'jetty-servlets', version: '9.2.4.v20141103'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.7.5'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.7.5'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
+configurations {
+    // configuration that holds jars to include in the jar
+    extraLibs
+}
+
+task fatJar(type: Jar) {
+    baseName = project.name + '-all'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
+
