--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
+import com.commercehub.gradle.plugin.avro.GenerateAvroJavaTask
+
 plugins {
     id 'java'
+    id "com.commercehub.gradle.plugin.avro" version "0.9.1"
 }
 
 group 'ABM'
@@ -8,7 +11,12 @@ version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+    gradlePluginPortal()
+    jcenter()
+    maven {
+        name "JCenter Gradle Plugins"
+        url "https://dl.bintray.com/gradle/gradle-plugins"
+    }
 }
 
 dependencies {
@@ -23,9 +31,13 @@ dependencies {
     compile group: 'org.eclipse.jetty', name: 'jetty-servlets', version: '9.2.4.v20141103'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.7.5'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.7.5'
+    compile group: 'org.jsonschema2pojo', name: 'jsonschema2pojo-core', version: '0.5.1'
+    compile group: 'org.apache.avro', name: 'avro', version: '1.8.2'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
+apply plugin: "com.commercehub.gradle.plugin.avro"
 
 configurations {
     // configuration that holds jars to include in the jar
@@ -38,3 +50,15 @@ task fatJar(type: Jar) {
     with jar
 }
 
+task generateAvro(type: GenerateAvroJavaTask) {
+    source("src/main/resources/avro")
+    outputDir = file("src/main/java/avro")
+    doLast {
+        println("RENAMING")
+        ant.move file: "src/main/java/avro/avro",
+                todir: "src/main/java/"
+        ant.replaceregexp(match:'org.apache.avro.specific.SpecificRecordBase', replace:'client.AvroHelper', flags:'g', byline:true) {
+            fileset(dir: 'src/main/java/avro', includes: '*.java')
+        }
+    }
+}
